Fixed gap at the very top of page with minor style change

--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -18,6 +18,11 @@ h4{
     font-family: $header-font;
 }
 
+h1 {
+  margin-top: 0;
+  padding-top: 10px;
+}
+
 input{
     font-size: 1.3rem;
 }
